# py_auto_tools

./: README.md  pyproject.toml
tools/py_data_analyzer/: notes.ipynb
tools/py_rees_usb_relay_app/: build.py  main.py
tools/py_tenma_ps_app/: build.py  main.py
tools/py_uml_gen_app/: build.py  main.py
tools/pyinstaller_gui/: build.py  main.py
